* Added function "knn" to find nearest neighbors between two spatial objects, with optional search radius

spatialEco_1.3-0
=================
* Added function "spatial.select" to perform a selection (subset) of a feature class based on a polygon(s) feature
* Added function "random.raster" for creating various random rasters or stacks
* Added function "shift" for shifting a vector by specified positive or negative lag
* Added function "explode" for exploding multipart to singlepart feature geometry 
* Added function "nth.values" for returning the Nth highest or lowest value(s) in a vector
* Added function "overlap" comparing the similarity of two niche estimates using Warren's-I
* Feature Enhancement "knn" expanded to accept "weights" or covariates for multivariate case
* Fixed bug "sp.ked" Error with defined extent in newdata
* Feature Enhancement "sp.ked" added row (nr) and column (nc) dimension arguments, replacing n. 
* Enhancement to "zonal.stats" leveraging velox extract speed
* Added function dependencies from orphaned CRAN package SDMTools (attributed to original author)
    Associated SDMTools functions include:
	  - connected.pixels
      - ClassStat
	  - PatchStat
	  - asc.from.raster
	  - spheroid.distance
	  - grid.info

spatialEco_1.3-1
=================
* Due to package depreciation, changed velox dependency to exactextractr for raster 
  extraction

* Depreciated two functions "land.metrics" and "focal.lmetrics" as there are now 
  better alternatives in the landscapemetrics package. This removed the need for a 
  C++ compile and also removed the associated SDMTools functions

* Depreciated "download.daymet" function due to the THREDDS server moving 
  to a NetCDF Markup Language (NcML) format

spatialEco_1.3-2
=================
* Feature Enhancement "hli" added support for southern hemisphere

* Added function "extract.vertices" for extracting (x,y) vertices coordinates from
  polygons and lines 
  