@@ -9,6 +9,7 @@ S3method(summary,cross.cor)
 S3method(summary,effect.size)
 S3method(summary,loess.boot)
 export(annulus.matrix)
+export(background)
 export(bearing.distance)
 export(breeding.density)
 export(class.comparison)
@@ -43,6 +44,7 @@ export(hli)
 export(hsp)
 export(hybrid.kmeans)
 export(idw.smoothing)
+export(insert)
 export(insert.values)
 export(kde.2D)
 export(kendall)
