@@ -47,7 +47,7 @@
 #' \donttest{
 #'  library(sp)                                            
 #'  library(raster)
-#'                                                                                                
+#'            
 #'  data(meuse.grid)
 #'  r1 <- sp::SpatialPixelsDataFrame(points = meuse.grid[c("x", "y")], 
 #'                                   data = meuse.grid)
@@ -69,12 +69,6 @@
 #'    sp::bubble(d.hex, "kappa")
 #'	    d.hex <- sp.na.omit(d.hex, col.name = "t.test")
 #'	  sp::bubble(d.hex, "t.test")
-#'
-#'  # Random sampling		
-#'  d.rand <- class.comparison(r1, r2, x.idx = 8, y.idx = 8, stat = "both", 
-#'                             sub.sample = TRUE, type = "random")	
-#'    sp::bubble(d.rand, "kappa")
-#' 
 #' }
 #' 
 #' @export
@@ -126,9 +120,7 @@ class.comparison <- function(x, y, x.idx = 1, y.idx = 1, d = "AUTO", stat = "kap
        } else if(stat == "t.test") { results <- list("t.test" = vector(), p.value=vector())
          } else if(stat == "kappa") { results <- list("kappa" = vector()) 
            } else { stop("Not a valid option") }	  	 
-	
 
-  
   if(sub.sample == FALSE) { 
     nb <- spdep::dnearneigh(sp::coordinates(x),0, d)  
       k <- vector()
@@ -179,21 +171,20 @@ class.comparison <- function(x, y, x.idx = 1, y.idx = 1, d = "AUTO", stat = "kap
 	#   nb indexes are too slow
 	
     if(!is.null(size)) { n = size } else { n = round(nrow(x) * p, 0) } 
-    if(type == "random") {
-	
+    
+	if(type == "random") {
 	  rs <- sample(1:length(nb), n)		  
 	  for(i in 1:length(rs)) {
         if( ncol(x) > 1) {
            x.var <- x@data[nb[[rs[i]]],][x.idx][,1]
 	     } else {
 	       x.var <- x@data[nb[[rs[i]]],]   
-	    }
+	     }
       if( ncol(y) > 1) {
          y.var <- y@data[nb[[rs[i]]],][x.idx][,1]
 	   } else {
 	     y.var <- y@data[nb[[rs[i]]],]   
 	    }
-	 
 	    if(stat == "kappa") {   
           results[["kappa"]] <- append(results[["kappa"]], round(cohen.d(x.var, y.var),4))
         } else if( stat == "t.test") {
@@ -224,7 +215,7 @@ class.comparison <- function(x, y, x.idx = 1, y.idx = 1, d = "AUTO", stat = "kap
 	  s <- x[rs,]
       s@data <- data.frame(x=x@data[rs,][x.idx], y=y@data[rs,][y.idx],
       	                   as.data.frame(do.call("cbind", results)))
-    } else {	
+    } else if(type == "hexagon") {	
       e <- as(raster::extent(x), "SpatialPolygons")  
 	  s <- sp::spsample(e, n = n,  type = "hexagonal")
 	    s <- sp::SpatialPointsDataFrame(s, data.frame(ID=1:length(s)))
