@@ -30,13 +30,13 @@
 #'
 #' @examples 
 #' \donttest{
-# Download monthly precipitation data Jan 1st 2000 to Dec 30th 2001 (n=24)
-#'    my.dates <- c('2000/1/1', '2001/12/30')
-#'    download.prism('ppt', date.range=my.dates, time.step='monthly', by.year=TRUE)
-#' 
-#' # Download monthly precipitation data Jan 1st 2000 to Feb 10th 2000 (n=41)
-#'    my.dates <- c('2000/1/1', '2000/2/10')
-#'    download.prism('ppt', date.range=my.dates, time.step='daily', by.year=TRUE)
+#' # Download monthly precipitation data Jan 1st 2000 to Dec 30th 2001 (n=24)
+#'     my.dates <- c('2000/1/1', '2001/12/30')
+#'     download.prism('ppt', date.range=my.dates, time.step='monthly', by.year=TRUE)
+#'  
+#'  # Download monthly precipitation data Jan 1st 2000 to Feb 10th 2000 (n=41)
+#'     my.dates <- c('2000/1/1', '2000/2/10')
+#'     download.prism('ppt', date.range=my.dates, time.step='daily', by.year=TRUE)
 #'}
 #'
 #' @export
@@ -48,9 +48,9 @@ download.prism <- function(data.type, date.range, time.step = "monthly",
       stop("Not a valid dataset")
     owd <- getwd()
       on.exit(setwd(owd))			
-	if(download.folder == "current") {
+	if(download.folder[1] == "current") {
 	  download.folder = getwd()
-    } else if(download.folder == "temp") {
+    } else if(download.folder[1] == "temp") {
 	  download.folder = tempdir()
     } 
 	if(!dir.exists(download.folder))
