@@ -6,7 +6,7 @@ spatialEco.ref <- c(
      title = "spatialEco",
      author = person(c("Jeffrey", "S."), "Evans", role = c("aut", "cre")),
      year = "2020",
-     note = "R package version 1.3-1",
+     note = "R package version 1.3-2",
      url = "https://github.com/jeffreyevans/spatialEco",
      key = "spatialEco-package"
    )
